# OpenWhisper

./: .env.example  .gitignore  README.md
.cursor/: README.md  codex-a2a-user-rule.txt  hooks.json
.cursor/commands/: delegate-to-codex.md
.cursor/hooks/: enforce-codex-wrapper.js  enforce-codex-wrapper.ps1
.cursor/rules/: codex-orchestrator.mdc
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/scripts/: clean-icons.cjs
apps/desktop/src/: main.ts  overlay-layout.test.ts  overlay-layout.ts  recording-pipeline.test.ts  recording-pipeline.ts  styles.css  (+1 more)
apps/desktop/src-tauri/: 2  Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  worker_client.rs
apps/web/: package-lock.json  package.json
apps/worker/: README.md  openwhisper-worker.spec  pyproject.toml
apps/worker/scripts/: benchmark_transcription_models.py  smoke_realtime_transcription.py
apps/worker/src/openwhisper_worker/: __init__.py  __main__.py  openai_client.py  protocol.py  server.py
apps/worker/tests/: test_openai_client.py  test_realtime_server.py
artifacts/: realtime-target-proof.txt
docs/: android-acceptance.md  android.md  architecture.md
qa/windows-overlay/: monitor-boundary-test.ps1  open-settings-panel.mjs  realtime-target-smoke.py
scripts/: android-emulator.ps1  android.ps1  bootstrap-android.ps1  build-android-release.ps1  build-windows-installer.ps1  bump-release-version.ps1  invoke-codex-agent.ps1  invoke-codex-agent.sh  load-env.ps1  pre-push-release.ps1  release-android.ps1  release.ps1  run-local.ps1  run-local.sh  setup-android-signing.ps1  setup-cursor-codex-a2a.mjs  setup-cursor-codex-a2a.ps1  setup-cursor-codex-a2a.sh  setup-updater-keys.ps1  sync-local-windows-release.ps1  test-android-release.ps1  test-android.ps1
scripts/hooks/: pre-commit  pre-push
(+73 files in other folders)
