[package]
name = "openwhisper_desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "openwhisper_desktop_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.40.0", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4"] }

